# sigmatactical.org

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
scripts/: docker-build.sh  prepare-image-context.sh  prepare-local.sh  sync-github-descriptions.sh  sync-github-metadata.sh
src/: catalog.rs  config.rs  lib.rs  main.rs  repos.rs  templates.rs
src/catalog/: enriched_repo.rs  repo_meta.rs  repo_section.rs  section_meta.rs
src/repos/: build_state.rs  build_status.rs  cache_state.rs  github_repo.rs  repo_view.rs  repos_cache.rs  repos_error.rs  workflow_run.rs  workflow_runs_response.rs
src/templates/: index_template.rs
templates/: index.html
tests/: http.rs  isolated_env.rs
