[package]

name = "sigmatactical-org"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
publish = false

[dependencies]
askama = "0.16.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", default-features = false, features = ["askama", "cache", "warp"] }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
warp = "0.4.3"

[dev-dependencies]
serde_json = "1.0.150"
serial_test = "3.5.0"
temp-env = "0.3.6"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4.3", features = ["server", "test"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
